# protobuf2jansson

./: LICENSE  Makefile.am  NEWS  README  configure.ac
include/: Makefile  Makefile.am  protobuf2jansson.h
libprotobuf2jansson/: Makefile  Makefile.am  libprotobuf2jansson.c  libprotobuf2jansson.la  libprotobuf2jansson_la-libprotobuf2jansson.lo  libprotobuf2jansson_la-meta_descriptor.json.lo  libprotobuf2jansson_la-varint.lo  meta_descriptor.json.c  meta_descriptor.json.h  minunit.h  varint.c  varint.h
libprotobuf2jansson/.deps/: libprotobuf2jansson.Plo  libprotobuf2jansson_la-libprotobuf2jansson.Plo  libprotobuf2jansson_la-meta_descriptor.json.Plo  libprotobuf2jansson_la-varint.Plo
libprotobuf2jansson/.libs/: libprotobuf2jansson.la  libprotobuf2jansson.lai  libprotobuf2jansson.so.0  libprotobuf2jansson.so.0.0.0
testsuite/: Makefile  Makefile.am  meta_descriptor.desc  testsuite  testsuite.c
testsuite/.deps/: exampleProgram-exampleProgram.Po  testsuite-testsuite.Po
testsuite/.libs/: testsuite
